# epm240-docs

./: readme-design  readme-links
altera-de0nano-nios/: readme-links
altera-de0nano-nios/batch1/: readme-links
altera-de0nano-nios/batch2/: readme-links  readme-list-files
altera-de0nano-nios/batch2-build/: build1.bash  build2  crt0_mod.s  lightsapp.c  nios_cpp_build.ld  readme-crt0  readme-list-files
altera-de0nano-nios/batch2-deeplearning/: readme-1-random-links  readme-2-nvdla-refs  readme-3-1-tensorflow-mnist-sample  readme-3-2-nvidia-xavier-nx-tensorflow  readme-3-3-batch  readme-3-4-realtime  readme-3-5-pytorch  readme-3-6-Writing_a_Toy_Backend_Compiler_for_PyTorch.html  readme-3-6-pytorch-jit-compiler  readme-4-rk1808  readme-4-rk1808-build  readme-4-rk1808-repo-doc  tut-tf-1-weights-save-2.py  tut-tf-2-lenet5-1.py  tut-tf-2-lenet5-2-nx.py  tut-tf-2-lenet5-3-nx.py  tut-tf-nx-calc.xlsx  tut-torch-1.py  tut-trt-1-batch.cpp
altera-de0nano-nios/batch2-deeplearning/rk1808-camera/: list-files  log-1-tb-96aiot-boot  log-1-tb-96aiot-shell  log-2-evb-boot  log-2-evb-shell  log-3-1-media-ctl  log-3-3-boot-cra-fixed  log-3-3-err-1  log-3-4-console-t4  log-3-4-media-ctl  log-3-4-run-t4  log-3-5-media-ctl-t2  log-3-6-err-2  log-err-1  log-evb-4-1-dmesg  log-evb-4-2-media-ctl  log-evb-4-3-media-ctl-again  t1-2  t2-1  t2-2  t3-1  t3-2  t4-2  t5-2
altera-de0nano-nios/other/: debian-minimal-install  netcat-tips  ssh-portfwd-tips
altera-de0nano-nios/other/bluetooth/ble-bglib/: readme-filter-mac
altera-de0nano-nios/other/bluetooth/bluez-init-doc/: bluez_init.sh  cmdline-1-m2  cmdline-1-m3  cmdline-1-raw  cmdline-2-m2  cmdline-2-raw  debug-log  readme-envset
altera-de0nano-nios/other/bluetooth/bluez-init-doc/deviceio_ref/: CMakeLists.txt
altera-de0nano-nios/other/bluetooth/bluez-init-doc/deviceio_ref/bluezlib/: CMakeLists.txt
altera-de0nano-nios/other/bluetooth/bluez-init-doc/deviceio_ref/test/: CMakeLists.txt
altera-de0nano-nios/other/bluetooth/bluez-pan/: readme-links
altera-de0nano-nios/other/bluetooth/bluez-pan/ble-learning/: list-files  readme-1-tutorial  readme-2-bled112  readme-3-bluez-ble  readme-4-uuid-service
altera-de0nano-nios/other/bluetooth/bluez-samples/: ble-example.py  findmyphone.py  rfcomm-client-countdown.py  rfcomm-client-sdp-repeat.py  rfcomm-client-sdp.py  rfcomm-client.py  rfcomm-server-sdp.c  rfcomm-server-sdp.py  rfcomm-server.c  rfcomm-server.py  sdp-browse.py  service-sample.cpp  simplescan.c
altera-de0nano-nios/other/bluetooth/nrf52/: readme-1-uart-example  readme-2-nrf52840-dongle  readme-3-1-tut-adv  readme-3-2-tut-svc  readme-3-3-tut-char
altera-de0nano-nios/other/bluetooth/tut-mit-csail/: readme-cmd
altera-de0nano-nios/other/stm32-nucleo-l432kc/: readme-1-setup  readme-2-new-project  readme-3-solokeys
altera-timing/: mnl_timequest_cookbook-pdf-link  tutorial-de0nano
cam-docs/buildroot-tutorial/: notes-links  usb-stick.tgz
cam-docs/opensource-wyze/: notes-links-1.txt
cam-docs/ov2640-xd95/: notes-links.txt
lora-docs/: readme-1-lora-feather
